# ctdd

./: README.md  __main__.c  __main__.h  __main__.py  pyproject.toml  requirements.txt
ctdd/: __init__.py  __main__.py  factory.py  ffi_factory.py  mocker.py  tester.py  tester_state.py
cttd/: tester.py
tests/: assert_tests.c  assert_tests.py  ffi_factory_tests.c  ffi_factory_tests.py  mock_tests.c  mock_tests.h  mock_tests.py
