[tool.poetry]
name = "cttd"
version = "0.0.1a0"
description = "C test-driven development framework implemented in Python"
authors = [
  "WideOpenTech <fossie@wideopentech.co.uk>",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/wideopensource/cttd"

[project.urls]
"Homepage" = "https://github.com/wideopensource/cttd"
"Bug Tracker" = "https://github.com/wideopensource/cttd/issues"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




