[tool.poetry]
name = "ctdd"
version = "0.0.4"
description = "C test-driven development framework implemented in Python"
authors = [
  "WideOpenTech <fossie@wideopentech.co.uk>",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/wideopensource/ctdd"

[project.urls]
"Homepage" = "https://github.com/wideopensource/ctdd"
"Bug Tracker" = "https://github.com/wideopensource/ctdd/issues"

[tool.poetry.dependencies]
python = "^3.8"
crelm = "^0.0.33"
john = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




